# comments

./: .gitignore  pyproject.toml
apps/comments/migrations/: 0002_alter_comment_text.py  0003_remove_commentfile_title_alter_commentfile_file.py
backend/: pyproject.toml
backend/apps/comments/: admin.py  models.py  validators.py
backend/apps/comments/migrations/: 0001_initial.py  0004_alter_commentfile_comment.py  0005_comment_email_comment_username_and_more.py
backend/config/: settings.py
config/: settings.py  urls.py
