[tool.poetry]
name = "comments"
version = "0.1.0"
description = ""
authors = ["Mykhailo Yakubets <mikhail.yakubets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
python-decouple = "^3.8"
django-debug-toolbar = "^4.0.0"
channels = "^4.0.0"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
redis = "^4.5.5"
django-bleach = "^3.0.1"
django-cleanup = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
djangorestframework-stubs = "^3.14.0"
mypy = "^1.3.0"
django-stubs = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "."
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
no_implicit_optional = false
exclude = ["manage.py", "urls.py"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.black]
line-length = 79
target-version = ["py311"]
include = "\\.py$"
exclude = "settings.py"
